syntax = "proto3";

package service;
option go_package="./service";

service User {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc FindById(FindByIdRequest) returns (FindByIdResponse);
  rpc FindByMobile(FindByMobileRequest) returns (FindByMobileResponse);
  rpc SendSms(SendSmsRequest) returns (SendSmsResponse);
}


message RegisterRequest {
  string username = 1;
  string mobile = 2;
  string avatar = 3;
  string password = 4;
}

message RegisterResponse {
  uint64 userId = 1;
}

message FindByIdRequest {
  uint64 userId = 1;
}

message FindByIdResponse {
  uint64 userId = 1;
  string username = 2;
  string mobile = 3;
  string avatar = 4;
}

message FindByMobileRequest {
  string mobile = 1;
}

message FindByMobileResponse {
  uint64 userId = 1;
  string username = 2;
  string mobile = 3;
  string avatar = 4;
}

message SendSmsRequest {
  uint64 userId = 1;
  string mobile = 2;
}

message SendSmsResponse {
}

